Fix compilation warnings and errors when using JDK9